<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/south_africa_outline"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".QuizAppProudlySouthAfrican">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="#E65100"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:text="@string/country"
            android:textAllCaps="true"
            android:textColor="#455A64"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:shadowColor="#FF5722"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowRadius="2.0"
            android:text="@string/headerText"
            android:textColor="#6D4C41"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/johannesburg_skyline"
                android:backgroundTint="#80FFFFFF"
                android:backgroundTintMode="src_over"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOne"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/questionOneText"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOneOptionOne"
                    android:textColor="#000000" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOneOptionTwo" />

                <RadioButton
                    android:id="@+id/question_1_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOneOptionThree" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOneOptionFour" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cape_town"
                android:backgroundTint="#80FFFFFF"
                android:backgroundTintMode="src_over"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionTwo"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionTwoText"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTwoOptionOne" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTwoOptionTwo" />

                <RadioButton
                    android:id="@+id/question_2_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTwoOptionThree" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTwoOptionFour" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/johannesburg_skyline"
                android:backgroundTint="#80FFFFFF"
                android:backgroundTintMode="src_over"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionThree"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionThreeText"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionThreeOptionOne" />

                <RadioButton
                    android:id="@+id/question_3_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionThreeOptionTwo" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionThreeOptionThree" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionThreeOptionFour" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cape_town"
                android:backgroundTint="#80FFFFFF"
                android:backgroundTintMode="src_over"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionFour"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionFourText"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionFourOptionOne" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionFourOptionTwo" />

                <RadioButton
                    android:id="@+id/question_4_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionFourOptionThree" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionFourOptionFour" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/johannesburg_skyline"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/questionFive"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/questionFiveText"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/question_5_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionFiveOptionOne" />

            <CheckBox
                android:id="@+id/question_5_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFiveOptionTwo" />

            <CheckBox
                android:id="@+id/question_5_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFiveOptionThree" />

            <CheckBox
                android:id="@+id/question_5_option_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFiveOptionFour" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/cape_town"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/questionSix"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:text="@string/questionSixText"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/question_6_answer_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:layout_marginLeft="16dp"
                android:hint="Answer"/>

        </LinearLayout>

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/answers_summary_name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/display_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:shadowColor="#FF5722"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowRadius="2.0"
            android:text="@string/displayMessage"
            android:textColor="#6D4C41"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitButton"
            android:text="@string/submitButton" />


    </LinearLayout>
</ScrollView>